Main page box layout complete

--- a/index.html
+++ b/index.html
@@ -10,18 +10,117 @@
 </head>
 <body>
 
-    <main class="container container-fluid">
-        <div class="row">
-            <div id="logo" class="col-12 col-md-4">
-                <p style="background-color:black; color: white; text-align: center;">logo</p>
-            </div>
+  <header class="row">
+    <div class="col-6 col-md-4">
+      <p class="boxHelper">Logo</p>
+    </div>
 
-            <div id="nav" class="col-12 col-md-8">
-                <p style="background-color:black; color: white; text-align: center;">navigation</p>
-            </div>
-        </div>
-    </main>
+    <nav class="col-6 col-md-8">
+      <p class="boxHelper">Main Nav</p>
+    </nav>
+
+    <h2 class="col-12 mx-auto boxHelper">Hello! I'm Lee</h2><br />
+    <button class="col-4 mx-auto boxHelper">Get Started <i class="fas fa-arrow-right"></i></button>
+  </header>
+
+  <section class="row no-gutters">
+    <h2 class="hide">My Skills</h2>
+
+    <div class="col-md-4 text-wrapper">
+      <h2>Skill Name</h2>
+      <p>Lorem Ipsum is simply dummy
+        text of the printing and typesetting industry.
+        Lorem Ipsum has been the industry's standard
+        dummy text ever since the 1500s,</p>
+    </div>
+
+    <div class="col-md-4 text-wrapper">
+      <h2>Skill Name</h2>
+      <p>Lorem Ipsum is simply dummy
+        text of the printing and typesetting industry.
+        Lorem Ipsum has been the industry's standard
+        dummy text ever since the 1500s,</p>
+    </div>
+
+    <div class="col-md-4 text-wrapper">
+      <h2>Skill Name</h2>
+      <p>Lorem Ipsum is simply dummy
+        text of the printing and typesetting industry.
+        Lorem Ipsum has been the industry's standard
+        dummy text ever since the 1500s,</p>
+    </div>
+
+  </section>
+
+  <section class="row no-gutters">
+    <h2 class="hide">My Works</h2>
+
+    <div class="col-12 col-md-6">
+      <p class="boxHelper">Main Work</p>
+    </div>
+
+    <div class="col-12 col-md-6 boxHelper">
+      <div class="row">
+      <div class="col-12 col-md-6"><p class="boxHelperT">Sub Work</p></div>
+      <div class="col-12 col-md-6"><p class="boxHelperT">Sub Work</p></div>
+      <div class="col-12 col-md-6"><p class="boxHelperT">Sub Work</p></div>
+      <div class="col-12 col-md-6"><p class="boxHelperT">Sub Work</p></div>
+      </div>
+    </div>
+
+  </section>
+
+  <div class="row viewWorks">
+    <button class="col-4 mx-auto boxHelper">View All Works</button>
+  </div>
+
+  <section class="row" id="aboutMe">
+    <h2 class="hide">About Me</h2>
+
+    <div class="col-12 mx-auto">
+      <h2>About Changseok Lee</h2>
+      <hr>
+      <p>Lorem Ipsum is simply dummy
+        text of the printing and typesetting industry.
+        Lorem Ipsum has been the industry's standard
+        dummy text ever since the 1500s,</p>
+    </div>
+  </section>
+
+  <section class="row no-gutters">
+    <h2 class="hide">My Hobbies</h2>
+
+    <div class="col-12 col-md-6">
+    </div>
+
+    <div class="col-12 col-md-6 boxHelper">
+      <div class="row">
+      <div class="col-12 col-md-6"><p class="boxHelperT">Sub Work</p></div>
+      <div class="col-12 col-md-6"><p class="boxHelperT">Sub Work</p></div>
+      <div class="col-12 col-md-6"><p class="boxHelperT">Sub Work</p></div>
+      <div class="col-12 col-md-6"><p class="boxHelperT">Sub Work</p></div>
+      </div>
+    </div>
+
+  </section>
+
+  <footer class="row">
+    <h2 class="hide">Main Footer</h2>
+
+    <div class="col-12 col-md-6">
+      <p class="boxHelper">Copy Right</p>
+    </div>
+
+    <div class="col-12 col-md-6">
+      <p class="boxHelper">Social Media</p>
+    </div>
+
+  </footer>
+
+
+
 
 <script src="js/main.js"></script>
+<script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 </body>
 </html>
