css and js styling start, almost finish

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/hover.css">
     <link href="https://fonts.googleapis.com/css?family=Oxygen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -15,7 +16,6 @@
 
   <header class="row">
     <div class="col-6 col-md-4">
-      <p class="boxHelper">Logo</p>
     </div>
 
     <div class="hiddenNav">
@@ -73,15 +73,74 @@
     <h2 class="hide">My Works</h2>
 
     <div class="col-12 col-md-6">
-      <img src="images/work1.jpg" alt="work1">
+
+      <div class="hovereffect">
+        <img src="images/work1.jpg" alt="work1" class="img-responsive">
+
+        <div class="overlay">
+                       <h2>Recent Work</h2>
+       				<p>
+       					<a href="#">LINK HERE</a>
+       				</p>
+        </div>
+
+      </div>
+
     </div>
 
     <div class="col-12 col-md-6">
       <div class="row no-gutters">
-      <div class="col-12 col-md-6"><img src="images/work2.jpg" alt="work2"></div>
-      <div class="col-12 col-md-6"><img src="images/work3.jpg" alt="work3"></div>
-      <div class="col-12"><img src="images/work6.jpg" alt="work4" id="wSix"></div>
+
+      <div class="col-12 col-md-6">
+
+        <div class="hovereffect">
+          <img src="images/work2.jpg" alt="work2">
+
+          <div class="overlay">
+                         <h2>Roku Web Development</h2>
+         				<p>
+         					<a href="#">LINK HERE</a>
+         				</p>
+          </div>
+
+        </div>
+
       </div>
+
+      <div class="col-12 col-md-6">
+
+        <div class="hovereffect">
+          <img src="images/work3.jpg" alt="work3">
+
+          <div class="overlay">
+                         <h2>Iron Docs Challenge</h2>
+         				<p>
+         					<a href="#">LINK HERE</a>
+         				</p>
+          </div>
+
+        </div>
+
+      </div>
+
+      <div class="col-12">
+
+        <div class="hovereffect">
+          <img src="images/work6.jpg" alt="work4" id="wSix">
+
+          <div class="overlay">
+                         <h2>Condordia Web Challenge</h2>
+         				<p>
+         					<a href="#">LINK HERE</a>
+         				</p>
+          </div>
+
+        </div>
+
+      </div>
+
+      </div>
+
     </div>
 
   </section>
