scroll down effect added and nav fixed a bit

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Changseok Lee Portfolio</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/hover.css">
+    <link rel="stylesheet" href="css/button.css">
+    <link rel="stylesheet" href="css/scroll.css">
     <link href="https://fonts.googleapis.com/css?family=Oxygen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -38,6 +40,10 @@
 
     <h2 class="col-12 mx-auto" id="headerInt">Hello! I'm Lee</h2><br />
     <button class="col-4 mx-auto" id="headerBut">Get Started <i class="fas fa-arrow-right"></i></button>
+
+
+    <div id="scrollD" class="scrollDown"></div>
+
   </header>
 
   <section class="row" id="skills">
@@ -146,7 +152,7 @@
   </section>
 
   <div class="row viewWorks">
-    <button class="col-2 mx-auto boxHelper">View All Works</button>
+    <button class="col-2 mx-auto">View All Works</button>
   </div>
 
   <section class="row" id="aboutMe">
@@ -162,8 +168,8 @@
     </div>
   </section>
 
-  <div class="row promoLine">
-    <button class="col-2 mx-auto">CONTACT ME!!!</button>
+  <div class="row promoLine cont">
+    <button class="col-2 mx-auto button">CONTACT ME!!!</button>
   </div>
 
   <section class="row no-gutters">
