header text animation added and readme update as well

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/hover.css">
     <link rel="stylesheet" href="css/button.css">
     <link rel="stylesheet" href="css/scroll.css">
+    <link rel="stylesheet" href="css/textanime.css">
     <link href="https://fonts.googleapis.com/css?family=Oxygen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -38,9 +39,14 @@
     	<span class="bar3"></span>
     </div>
 
-    <h2 class="col-12 mx-auto" id="headerInt">Hello! I'm Lee</h2><br />
-    <button class="col-4 mx-auto" id="headerBut">Get Started <i class="fas fa-arrow-right"></i></button>
-
+    <div class="col-12 mx-auto  unbreakable unbreakableCont" id="headerInt">
+      <div class="unbreakable">
+      <span class="un">Hello</span>
+      <span class="break">I'm</span>
+      <span class="able">Lee</span>
+      </div>
+      <div class="ks">Front-end Web Developer</div>
+    </div>
 
     <div id="scrollD" class="scrollDown"></div>
 
