scroll top function add and portfolio page build start

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Skills</a></li>
-          <li><a href="#">Portfolio</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
@@ -40,7 +40,7 @@
     	<span class="bar3"></span>
     </div>
 
-    <div class="col-12 mx-auto  unbreakable unbreakableCont" id="headerInt">
+    <div class="col-12 col-md-9 mx-auto  unbreakable unbreakableCont" id="headerInt">
       <div class="unbreakable">
       <span class="un">Hello</span>
       <span class="break">I'm</span>
@@ -82,84 +82,10 @@
 
   </section>
 
-  <section class="row no-gutters img-fluid" id="works">
-    <h2 class="hide">My Works</h2>
-
-    <div class="col-12 col-md-6">
-
-      <div class="hovereffect">
-        <img src="images/work1.jpg" alt="work1" class="img-responsive">
-
-        <div class="overlay">
-                       <h2>Recent Work</h2>
-       				<p>
-       					<a href="#">LINK HERE</a>
-       				</p>
-        </div>
-
-      </div>
-
-    </div>
-
-    <div class="col-12 col-md-6">
-      <div class="row no-gutters">
-
-      <div class="col-12 col-md-6">
-
-        <div class="hovereffect">
-          <img src="images/work2.jpg" alt="work2">
-
-          <div class="overlay">
-                         <h2>Roku Web Development</h2>
-         				<p>
-         					<a href="#">LINK HERE</a>
-         				</p>
-          </div>
-
-        </div>
-
-      </div>
-
-      <div class="col-12 col-md-6">
-
-        <div class="hovereffect">
-          <img src="images/work3.jpg" alt="work3">
-
-          <div class="overlay">
-                         <h2>Iron Docs Challenge</h2>
-         				<p>
-         					<a href="#">LINK HERE</a>
-         				</p>
-          </div>
-
-        </div>
-
-      </div>
-
-      <div class="col-12">
-
-        <div class="hovereffect">
-          <img src="images/work6.jpg" alt="work4" id="wSix">
-
-          <div class="overlay">
-                         <h2>Condordia Web Challenge</h2>
-         				<p>
-         					<a href="#">LINK HERE</a>
-         				</p>
-          </div>
-
-        </div>
-
-      </div>
-
-      </div>
-
-    </div>
-
-  </section>
+  
 
   <div class="row viewWorks">
-    <button class="col-2 mx-auto">View All Works</button>
+    <button class="col-2 mx-auto portBut"><a href="portfolio.html"> View All Works</a></button>
   </div>
 
   <section class="row" id="aboutMe">
@@ -271,6 +197,10 @@
     </div>
 
   </footer>
+
+  <div id="scTop">
+  <i class="fas fa-caret-square-up"></i>
+  </div>
 
 
 
